# data-eng-zoomcamp-2026-project

./: .bruin.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  duckdb-dev.db
.github/workflows/: ci.yml
app/: README.md  pipeline.yml  pyproject.toml
app/assets/: fighters_scraper.py
app/assets/dwh/: dim_events.sql  dim_fighters.sql  fact_bouts.sql
app/assets/raw/: bouts_scraper.py  events_scraper.py  fighters_scraper.py
app/assets/staging/: bouts.sql  events.sql  fighters.sql
app/macros/: generate_surrogate_key.sql
iac/: backend.tf  provider.tf  root.hcl  terragrunt.hcl
iac/_envcommon/: artifact-registry.hcl  bigquery.hcl  cloud-run-job.hcl  service-account.hcl  workload-identity.hcl
iac/modules/artifact-registry/: main.tf
iac/modules/bigquery/: main.tf
iac/modules/cloud-run-job/: main.tf
iac/modules/service-account/: main.tf
iac/modules/workload-identity/: main.tf
iac/production/: env.hcl
iac/production/artifact-registry/: terragrunt.hcl
iac/production/bigquery/: terragrunt.hcl
iac/production/cloud-run-job/: terragrunt.hcl
iac/production/service-account/: terragrunt.hcl
iac/production/workload-identity/: terragrunt.hcl
iac/staging/: env.hcl
iac/staging/bigquery/: terragrunt.hcl
iac/staging/cloud-run-job/: terragrunt.hcl
iac/staging/service-account/: terragrunt.hcl
iac/staging/workload-identity/: terragrunt.hcl
ui/: pyproject.toml  streamlit_app.py
